Fix the wrong link. Fix format-detection.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="description" content="Alejandro Wang Portfolio">
   <meta name="author" content="Alejandro Wang">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="format-detection" content="telephone=no">
   <link rel="stylesheet" href="./assets/css/preloader.css">
   <link rel="stylesheet" href="./assets/css/normalize.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -77,26 +78,6 @@
               </div>
             </div>
 
-            <!-- <div class="card">
-              <div class="card-header" id="inneref-title">
-                <h2 class="mb-0" data-toggle="collapse" data-target="#inneref-info" aria-expanded="false" aria-controls="inneref-info">Inneref / Empjoy</h2>
-              </div>
-              <div id="inneref-info" class="collapse" aria-labelledby="inneref-title" data-parent="#worklist">
-                <div class="card-body">
-                  <h3>_intro</h3>
-                  <p>engagement app for new employees in CHI competition<br> designed for enterprise</p>
-                  <h3>_duration</h3>
-                  <p>10/ 2017 - 1/ 2018 </p>
-                  <h3>_contest</h3>
-                  <p>CHI, university of Michigan</p>
-                  <h3>_scope</h3>
-                  <p>User Research, Mobile App Interaction Design</p>
-                  <a class="word-colored-orange" href="./mobile/">Read more</a>
-                </div>
-              </div>
-            </div> -->
-
-
             <div class="card">
               <div class="card-header" id="smartpill-title">
                 <h2 class="mb-0" data-toggle="collapse" data-target="#smartpill-info" aria-expanded="false" aria-controls="smartpill-info">SmartPill</h2>
@@ -111,7 +92,7 @@
                   <p>Chinese Business Culture and Entrepreneurship, Zhejiang University</p>
                   <h3>_scope</h3>
                   <p>Market Research, Business Process Design, Strategy, UI Design</p>
-                  <a class="word-colored-orange" href="./mobile/">Read more</a>
+                  <a class="word-colored-orange" href="./smartpill/">Read more</a>
                 </div>
               </div>
             </div>
@@ -149,7 +130,7 @@
                   <p>Architecture Design, Zhejiang University</p>
                   <h3>_scope</h3>
                   <p>'Product' Research, Architecture Design</p>
-                  <a class="word-colored-orange" href="./animal/">Read more</a>
+                  <a class="word-colored-orange" href="./edge/">Read more</a>
                 </div>
               </div>
             </div>
@@ -172,6 +153,26 @@
                 </div>
               </div>
             </div>
+
+            <!-- <div class="card">
+              <div class="card-header" id="inneref-title">
+                <h2 class="mb-0" data-toggle="collapse" data-target="#inneref-info" aria-expanded="false" aria-controls="inneref-info">Inneref / Empjoy</h2>
+              </div>
+              <div id="inneref-info" class="collapse" aria-labelledby="inneref-title" data-parent="#worklist">
+                <div class="card-body">
+                  <h3>_intro</h3>
+                  <p>engagement app for new employees in CHI competition<br> designed for enterprise</p>
+                  <h3>_duration</h3>
+                  <p>10/ 2017 - 1/ 2018 </p>
+                  <h3>_contest</h3>
+                  <p>CHI, university of Michigan</p>
+                  <h3>_scope</h3>
+                  <p>User Research, Mobile App Interaction Design</p>
+                  <a class="word-colored-orange" href="./mobile/">Read more</a>
+                </div>
+              </div>
+            </div> -->
+
 
             <div class="card">
               <div class="card-header" id="about-title">
