Fix the wrong next link.

--- a/inforest/index.html
+++ b/inforest/index.html
@@ -245,7 +245,7 @@
 				<a href="../index.html">
 					< back to home</a>
 			</p>
-			<p class="right"> <a href="../mobile/">next project: The Edge: Animal Shelter Design ></a> </p>
+			<p class="right"> <a href="../edge/">next project: The Edge: Animal Shelter Design ></a> </p>
 
 			<p class="copyright">&copy; Alejandro. Special thanks to <a href="https://html5up.net">HTML5 UP</a>.</p>
 		</footer>
