Fix the illegal attributes.

--- a/civicrm/index.html
+++ b/civicrm/index.html
@@ -39,9 +39,9 @@
 		<!-- Header -->
 		<header id="header" class="civicrm alt">
 			<!-- <span class="logo"><img src="images/logo.svg" alt="" /></span> -->
-			<h1>Consulting For Netural Zone</h1>
-			<p>CiviCRM NZ customized version - contextual inquiry for client's need to <br>
-				 reshape experiences of tracking teen members and programs </p>
+			<h1>Consulting For CiviCRM<sup>nz</sup> </h1>
+			<p>Contextual inquiry for client's need to <br>
+				 reshape experiences of tracking teen members and programs <br> in CiviCRM NZ customized system</p>
 		</header>
 		<section id="header-img" class="civicrm main">
 			<span class="image main"><img src="images/civicrm_header.png" alt="" /></span>
@@ -51,10 +51,8 @@
 		<nav id="nav" class="civicrm">
 			<ul>
 				<li><a href="#intro" class="active">intro</a></li>
-				<li><a href="#analysis">analysis</a></li>
-				<li><a href="#model">model</a></li>
-				<li><a href="#strategy">strategy</a></li>
-				<li><a href="#wireframe">wireframe</a></li>
+				<li><a href="#research">research</a></li>
+				<li><a href="#reshape">reshape</a></li>
 			</ul>
 		</nav>
 
@@ -71,9 +69,10 @@
 					<div class="6u$ 12u$(medium)">
 						<ul class="alt">
 							<li><strong>_duration</strong> 8/ 2017 - 12/ 2017.</li>
+							<li><strong>_client</strong> Neutral Zone (NZ), a teen center for promoting teenage growth through artistic expression and leadership training </li>
 							<li><strong>_course</strong> Contextual Inquiry and Consulting Foundation, University of Michigan</li>
 							<li><strong>_partners</strong> <a href="https://www.piaoyangwang.com">Piaoyang Wang</a>, Jillian Peacock, Matthew Thornton</li>
-							<li><strong>_scope</strong> Contextual Inquiry, Background Research, User Interviews, Qualitative Research</li>
+							<li><strong>_scope</strong> Contextual Inquiry, Qualitative Research</li>
 						</ul>
 					</div>
 				</div>
@@ -82,58 +81,57 @@
 			<!-- Intro -->
 			<section id="intro" class="main">
 				<h2>_introducing</h2>
-				<h3>NZ provides fun programs for local teens <br>using customized CiviCRM system </h3>
+				<h3><a href="http://neutral-zone.org">NZ</a> provides fun programs for local teens <br>using customized CiviCRM system </h3>
 				<div class="row">
 					<div class="9u$ -3u 12u$(medium)">
-						<p>CiviCRM is an open source, web-based management database specifically for nonprofit organizations. </p>
-						<p>Since it's customized by Netural Zone, we call it CiviCRM <sup>nz</sup>. </p>
-						<p>Our client want to improve the use of CiviCRM to gather and manage information about teens and improve outreach and engagement with parents.</p>
+						<p>CiviCRM is an open source, web-based management database specifically for nonprofit organizations. Since it's customized by Netural Zone, we call it CiviCRM <sup>nz</sup>. </p>
+						<p>Neutral Zone is a diverse, youth-driven teen center. Our client want to improve the use of CiviCRM to gather and manage information about programs and improve outreach and engagement with teens.</p>
+						<p>By conducting an evaluation of the CiviCRM<sup>nz</sup> through research and interviews, we will come up with recommendations so NZ can improve the use of system.</p>
 
 					</div>
 				</div>
 				<hr>
 				<h3>so we came up with the idea for patents <br>to create or get possible medical resourse <br>on their phone with Smartpill</h3>
-				<p><a href="#model">skip to see the model ></a></p>
+				<p><a href="#result">skip to see the findings + recommendations ></a></p>
 			</section>
 
-			<!-- interview + affinity wall -->
-			<section id="interview" class="main">
-				<h2>_interview</h2>
-				<h3>before we started, we need to analysis <br>the pest + market resources to make sure <br>if there's a possible market</h3>
+			<!-- research -->
+			<section id="research" class="main">
+				<h2>_user research</h2>
+				<h3>before we started, we conduct background research on NGO for teens and also CiviCRM</h3>
 				<div class="row">
 					<div class="8u$ -4u 12u$(medium)">
 						<span class="image alt"><img src="images/smartpill_pest0.png" alt="" /></span>
 						<span class="image alt"><img src="images/smartpill_pest1.png" alt="" /></span>
-						<p><sup>*1 There is no specific law in mobile medical care in China. I use standards by FDA in the U.S. to classify apps in China.</sup></p>
-						<p><sup>*2 With traditional Chinese diagnostics, patients are more focus on their symptom instead of body index data. But most patients are likely to use western medicine.</sup></p>
+						<p>The purpose is to get to know more about our client and the web-based system.</p>
+						<p>NZ is a non-profit organizations aiming the teens. Like all the similar institutes, the finance relies on donation from parents and philanthropist. </p>
+						<p>CiviCRM is an open source, web-based data management software designed for non-profit organizations. It is highly expandable while it usually has tons of bugs. The current system NZ is using was specially modified by the developers.</p>
 					</div>
 				</div>
 
 				<hr>
-				<h3>then we started to dig in <br>who can we serve and,<br>what can Smartpill do in capability </h3>
+				<h3>our five interviews in NZ <br>covers teachers, directors and data developers. </h3>
 				<span class="image alt"><img src="images/smartpill_target.png" alt="" /></span>
+				<div class="row">
+					<div class="8u$ -4u 12u$(medium)">
+						<span class="image alt"><img src="images/smartpill_pest0.png" alt="" /></span>
+						<span class="image alt"><img src="images/smartpill_pest1.png" alt="" /></span>
+						<p>Before the interviews, we prepared the protocols for interviewees to let us keep on track on finding out what the main issues are. During interviews, two of our team members were present. One was a designated interviewer and the other one was a note taker. We also got permission to record the conversations so we can replay afterwards. Observation was also part of interview, we asked interviewees to show us how they used the software system. Besides that, we also took a look at the space and the relevant artifacts. </p>
+					</div>
+				</div>
 				<hr>
 				<h3>in a word, <br>SmartPill offers self-diagnostics <br>and drug use inquiry services <br>for the young and mid-aged patients <br>with slight or chronic disease</h3>
 
 			</section>
 
-			<!-- brainstorming  -->
-			<section id="brainstorm" class="main black-bg">
-				<h2>_brainstorming</h2>
+			<!-- _findings + recommendations  -->
+			<section id="result" class="main black-bg">
+				<h2>_reshape w/ recommendations</h2>
 				<h3 class="grey">we spent a semester on business analysis <br>to make a more complete model <br>with possible resources </h3>
 				<span class="image alt"><img src="images/smartpill_model.png" alt="" /></span>
 				<hr>
 				<h3 class="grey">as shown, we expand the partners to <br>medical companies and pharmacist union to <br>provide stable service and <br>collect more information in diagnostics database</h3>
 			</section>
-
-			<!-- recommendations -->
-			<section id="recommendation" class="main">
-				<h2>_recommendation</h2>
-				<h3>by market research and survey, <br>we designed a marketing strategy in 4P frame <br>to make sure our target users are accurate</h3>
-				<span class="image alt"><img src="images/smartpill_strategy.png" alt="" /></span>
-			</section>
-
-		</div>
 
 		<!-- Footer -->
 
