New project CiviCRM ready. Not launched yet.

--- a/civicrm/index.html
+++ b/civicrm/index.html
@@ -40,8 +40,7 @@
 		<header id="header" class="civicrm alt">
 			<!-- <span class="logo"><img src="images/logo.svg" alt="" /></span> -->
 			<h1>Consulting For CiviCRM<sup>nz</sup> </h1>
-			<p>Contextual inquiry for client's need to <br>
-				 reshape experiences of tracking teen members and programs <br> in CiviCRM NZ customized system</p>
+			<p>Contextual inquiry for client's need to <br> reshape experiences of tracking teen members and programs <br> in CiviCRM NZ customized system</p>
 		</header>
 		<section id="header-img" class="civicrm main">
 			<span class="image main"><img src="images/civicrm_header.png" alt="" /></span>
@@ -63,7 +62,8 @@
 
 				<div class="row">
 					<div class="6u 12u$(medium)">
-						<p><strong>_role</strong> Since it's an academic course, all my teammates shared the equal workload. I was contactor, interviewerer, note taker, and designer at different periods in the project. I was also in charge of make the recommendations and presentation.
+						<p><strong>_role</strong> Since it's an academic course, all my teammates shared the equal workload. I was contactor, interviewerer, note taker, and designer at different periods in the project. I was also in charge of make the recommendations and
+							presentation.
 						</p>
 					</div>
 					<div class="6u$ 12u$(medium)">
@@ -81,71 +81,205 @@
 			<!-- Intro -->
 			<section id="intro" class="main">
 				<h2>_introducing</h2>
-				<h3><a href="http://neutral-zone.org">NZ</a> provides fun programs for local teens <br>using customized CiviCRM system </h3>
+				<h3><a href="http://neutral-zone.org">NZ</a> provides fun programs for local teens <br>using customized <a href="https://civicrm.org">CiviCRM</a> system </h3>
 				<div class="row">
 					<div class="9u$ -3u 12u$(medium)">
 						<p>CiviCRM is an open source, web-based management database specifically for nonprofit organizations. Since it's customized by Netural Zone, we call it CiviCRM <sup>nz</sup>. </p>
 						<p>Neutral Zone is a diverse, youth-driven teen center. Our client want to improve the use of CiviCRM to gather and manage information about programs and improve outreach and engagement with teens.</p>
 						<p>By conducting an evaluation of the CiviCRM<sup>nz</sup> through research and interviews, we will come up with recommendations so NZ can improve the use of system.</p>
-
 					</div>
 				</div>
 				<hr>
-				<h3>so we came up with the idea for patents <br>to create or get possible medical resourse <br>on their phone with Smartpill</h3>
 				<p><a href="#result">skip to see the findings + recommendations ></a></p>
 			</section>
 
 			<!-- research -->
 			<section id="research" class="main">
 				<h2>_user research</h2>
-				<h3>before we started, we conduct background research on NGO for teens and also CiviCRM</h3>
+				<h3>when we started, <br>we conduct background research on <br>NGO for teens and also CiviCRM itself</h3>
 				<div class="row">
 					<div class="8u$ -4u 12u$(medium)">
-						<span class="image alt"><img src="images/smartpill_pest0.png" alt="" /></span>
-						<span class="image alt"><img src="images/smartpill_pest1.png" alt="" /></span>
 						<p>The purpose is to get to know more about our client and the web-based system.</p>
-						<p>NZ is a non-profit organizations aiming the teens. Like all the similar institutes, the finance relies on donation from parents and philanthropist. </p>
+						<p>NZ is a non-profit organizations aiming the teens. Like all the similar institutes, the finance relies on donors including parents and philanthropist. </p>
 						<p>CiviCRM is an open source, web-based data management software designed for non-profit organizations. It is highly expandable while it usually has tons of bugs. The current system NZ is using was specially modified by the developers.</p>
+						<span class="image alt"><img src="images/civicrm-screenshot.png" alt="" /></span>
 					</div>
 				</div>
 
 				<hr>
-				<h3>our five interviews in NZ <br>covers teachers, directors and data developers. </h3>
-				<span class="image alt"><img src="images/smartpill_target.png" alt="" /></span>
+				<h3>our five interviews in NZ <br>covered teachers, directors and data developers </h3>
 				<div class="row">
 					<div class="8u$ -4u 12u$(medium)">
-						<span class="image alt"><img src="images/smartpill_pest0.png" alt="" /></span>
-						<span class="image alt"><img src="images/smartpill_pest1.png" alt="" /></span>
-						<p>Before the interviews, we prepared the protocols for interviewees to let us keep on track on finding out what the main issues are. During interviews, two of our team members were present. One was a designated interviewer and the other one was a note taker. We also got permission to record the conversations so we can replay afterwards. Observation was also part of interview, we asked interviewees to show us how they used the software system. Besides that, we also took a look at the space and the relevant artifacts. </p>
+						<p>Before the interviews, we prepared the protocols for interviewees to let us keep on track to learn how CiviCRM works in NZ. Two of our team members were assigned to each interview - one as designated interviewer, and one as note taker.</p>
+						<p>Contextual inquiry also include observation on the users' behaviour, and even the artifacts and physical environment. We took about an hour for each interview to catch every single piece of information we can. </p>
+						<blockquote>
+							Sometimes it’s very quick. In a few minutes they will call or email back. Sometimes they will be able to somebody else that day. Sometimes it takes a few days or even a week or two. Sometimes we won’t hear back for a while. <br> -- Director A talking
+							about tech support
+						</blockquote>
+						<blockquote>
+							Very rough...I have problem finding things that aren’t there that should be there. <br> -- Advisor B talking about daily use
+						</blockquote>
 					</div>
 				</div>
-				<hr>
-				<h3>in a word, <br>SmartPill offers self-diagnostics <br>and drug use inquiry services <br>for the young and mid-aged patients <br>with slight or chronic disease</h3>
 
+				<hr>
+				<h3>we then used the affinity wall as interpretation tool <br>to organize findings in structure </h3>
+				<div class="row">
+					<div class="8u$ -4u 12u$(medium)">
+						<p>After all the interviews, we replayed all the recordings together, and wrote down pieces of finding on yellow stickers. Putting stickers in different groups, we then sit and came up with higher-level conclusions on pink, blue and big yellow.</p>
+
+					</div>
+				</div>
+				<span class="image alt"><img src="images/civicrm-affinityWall.jpg" alt="" /></span>
 			</section>
 
 			<!-- _findings + recommendations  -->
-			<section id="result" class="main black-bg">
+			<section id="reshape" class="main">
 				<h2>_reshape w/ recommendations</h2>
-				<h3 class="grey">we spent a semester on business analysis <br>to make a more complete model <br>with possible resources </h3>
-				<span class="image alt"><img src="images/smartpill_model.png" alt="" /></span>
+				<h3>we brainstorm and <br> use evaluation table as methods</h3>
+				<div class="row">
+					<div class="8u$ -4u 12u$(medium)">
+						Using affinity wall to organize the findings, we summarized 3 key findings. To make recommendations, we make brainstorming and compare in evaluation table. The evaluation includes 4 factors: problem solved, financial cost, required efforts, feasibility
+					</div>
+				</div>
 				<hr>
-				<h3 class="grey">as shown, we expand the partners to <br>medical companies and pharmacist union to <br>provide stable service and <br>collect more information in diagnostics database</h3>
+				<h3>1/ with unstable CiviCRM, tech support <br>did not meet NZ’s needs, overall</h3>
+				<div class="row">
+					<div class="8u$ -4u 12u$(medium)">
+
+						<blockquote>
+							It can take some time for IT to get back to us. <br> -- Devoloper A talking
+						</blockquote>
+
+						<blockquote>
+							Sometimes it’s very quick. In a few minutes they will call or email back. Sometimes they will be able to somebody else that day. Sometimes it takes a few days or even a week or two.  Sometimes we won’t hear back for a while. <br> -- Director A
+							talking
+						</blockquote>
+
+						<div class="row">
+
+							<div class="6u 12u$(medium)">
+								<span class="image fit"><img src="images/civicrm-oldDateSoftware.png" alt="" /></span>
+								<h4>old-date software? <br>keep up-to-date! </h4>
+								<p>
+									CiviCRM is an open source software which is easy to customize. But it’s risky to do that because it will be hard to upgrade after changing the codes.
+									<br> Our recommendation is to ensure Neutral Zone’s CiviCRM is a branch of original open source CiviCRM using user-defined keywords and flexible plugins, instead of modifying the core directly, so it can be updated as well as the original version.
+								</p>
+							</div>
+							<div class="6u 12u$(medium)">
+
+
+								<span class="image fit"><img src="images/civicrm-noReply.png" alt="" /></span>
+								<h4>no reply? <br>new protocal! </h4>
+								<p>
+									Usually it’s a long time to receive a feedback from the developer, as well as for problems to be fixed.
+									<br> Our recommendation is to create an issue-feedback process between Neutral Zone and the current tech developer.
+								</p>
+							</div>
+
+							<div class="6u 12u$(medium)">
+								<span class="image fit"><img src="images/civicrm-onePersonOnly.png" alt="" /></span>
+								<h4>one person only? <br>hire volunteers! </h4>
+								<p>
+									Now NZ transfers to another person as the developer. But there’s only one person in charge.
+									<br> Our recommendation is to invite developers from University of Michigan as supplementary tech support.
+								</p>
+							</div>
+
+
+						</div>
+					</div>
+				</div>
+
+				<hr>
+
+				<h3>2/ rosters and reports are not functioning properly <br>while the whole system is hard to use</h3>
+				<div class="row">
+					<div class="8u$ -4u 12u$(medium)">
+
+						<blockquote>
+							Very rough...I have problem finding things that aren’t there that should be there. <br> -- Advisor B talking
+						</blockquote>
+
+						<blockquote>
+							It’s a little daunting...you see all this and you scroll and these fields are really big and some of them are hidden and you say ‘Do I want program rosters 15-16, where’s 16-17, it’s gone’, so there are some awkward things about using it. <br>--
+							Devoloper B talking
+						</blockquote>
+
+						<div class="row">
+							<div class="6u 12u$(medium)">
+
+								<span class="image fit"><img src="images/civicrm-unusableReport.png" alt="" /></span>
+								<h4>unusable report? <br>customize it! </h4>
+								<p>
+									Now reports and rosters cannot be generated automatically nor meet staff's specific needs.
+									<br> Our recommendation is to improve the power of filters already in CiviCRM and allow user to create customized filtered report.
+								</p>
+							</div>
+
+							<div class="6u 12u$(medium)">
+								<span class="image fit"><img src="images/civicrm-badReachability.png" alt="" /></span>
+								<h4>bad reachability? <br>improve interface! </h4>
+								<p>
+									The searching ability is limited and there are too many unnecessary navigation tabs.
+									<br> Our recommendation is to write a plugin for more powerful searching ability, and also reduce unnecessary navigation bars.
+								</p>
+							</div>
+
+							<div class="6u 12u$(medium)">
+								<span class="image fit"><img src="images/civicrm-missCheckIn.png" alt="" /></span>
+								<h4>miss check-in? <br>more scanner! </h4>
+								<p>
+									Teen can miss check in to the program at the entrance. And now it only allow teachers to add check-in information manually.
+									<br> Our recommendation is to use more physical scanners or new app on their iPad to allow check-in in classrooms by scanning teen's QR code.
+								</p>
+							</div>
+
+						</div>
+					</div>
+				</div>
+
+				<hr>
+
+				<h3>3/ while previous users have difficult in using CiviCRM,<br> new users are not motivated to learn to use it </h3>
+				<div class="row">
+					<div class="8u$ -4u 12u$(medium)">
+
+						<blockquote>
+							People are frustrated that the system CiviCRM isn't working. <br> -- User with 3 years experiences
+						</blockquote>
+
+						<blockquote>
+							It’s easier to use Excel now, I don’t really trust CiviCRM. <br> -- User with no experiences
+						</blockquote>
+
+						<span class="image fit"><img src="images/civicrm-unTrust.png" alt="" /></span>
+						<h4>untrust? <br>provide help + training! </h4>
+						<p>
+							Now the usability issues involved to trust and relying problems. Since NZ really want to go back to work on CiviCRM easily again, we recommend that NZ should come up with some training material about CiviCRM for new employees. Offering some help tips
+							on mostly used pages online may also help.
+						</p>
+					</div>
+
+				</div>
+
+
+
 			</section>
 
-		<!-- Footer -->
+			<!-- Footer -->
 
-		<footer id="footer">
-			<p>
-				<a href="../index.html">
-					< back to home</a>
-			</p>
-			<p class="right"> <a href="../smartpill/">next project: Smartpill ></a> </p>
+			<footer id="footer">
+				<p>
+					<a href="../index.html">
+						< back to home</a>
+				</p>
+				<p class="right"> <a href="../smartpill/">next project: Smartpill ></a> </p>
 
-			<p class="copyright">&copy; Alejandro. Special thanks to <a href="https://html5up.net">HTML5 UP</a>.</p>
-		</footer>
+				<p class="copyright">&copy; Alejandro. Special thanks to <a href="https://html5up.net">HTML5 UP</a>.</p>
+			</footer>
 
-	</div>
+		</div>
 
 
 </body>
